# arrow

./: .gitignore  CMakeLists.txt  PreLoad.cmake  arrow.sln  compile_commands.json
arrow/: CMakeLists.txt  arrow.vcxproj  arrow.vcxproj.filters
arrow/include/: box.hpp  camera.hpp  control.h  defs.h  light.hpp  material.h  objLoader.hpp  object.hpp  player.h  shader.h  shape.hpp  texturemgr.hpp
arrow/lib/: glfw3.lib
arrow/resource/assets/player/: player.mtl
arrow/resource/assets/player2/: player.mtl
arrow/resource/shader/default/: vs.glsl
arrow/resource/shader/diffuse/: fs.glsl
arrow/resource/shader/normal/: vs.glsl
arrow/resource/shader/pbr/: fs.glsl
arrow/resource/shader/skybox/: fs.glsl
arrow/src/: control.cpp  glad.c  main.cpp  material.cpp  objLoader.cpp  player.cpp  shader.cpp  shape.cpp  texturemgr.cpp
doc/: reference.md
include/: arrow.hpp  box.hpp  bvh.h  camera.hpp  candy.hpp  control.h  defs.h  grid.h  ground.hpp  light.hpp  material.h  mathutils.h  obb.h  objLoader.hpp  object.hpp  player.h  ray.h  shader.h  shape.hpp  sync.hpp  ui.hpp
prtbackend/: CMakeLists.txt  defs.h  loader.cpp  loader.h  main.cpp  prt.cpp  prt.h  scene.cpp  scene.h  spherical_harmonics.cpp  spherical_harmonics.h
resource/assets/CornellBox/: lighting.txt
resource/assets/candy/: candy.mtl
resource/assets/player2/: player.blend  player.mtl
resource/assets/scene/: buildings.mtl  floor.mtl  scene.mtl
resource/assets/skybox_zjg/: lighting.txt
resource/assets/weapon/: knife.mtl
resource/shader/box/: fs.glsl
resource/shader/default/: fs.glsl
resource/shader/diffuse/: fs.glsl
resource/shader/flat/: fs.glsl  vs.glsl
resource/shader/normal/: gs.glsl
resource/shader/prt/: fs.glsl  vs.glsl
resource/shader/shadow/: fs.glsl  vs.glsl
resource/shader/text/: vs.glsl
server/: CMakeLists.txt  server.cpp  server.hpp
src/: arrow.cpp  bvh.cpp  camera.cpp  candy.cpp  client.cpp  control.cpp  grid.cpp  ground.cpp  main.cpp  material.cpp  obb.cpp  objLoader.cpp  player.cpp  ray.cpp  shader.cpp  sync.cpp  texturemgr.cpp  ui.cpp
src/utils/: mathutils.cpp
test/: sattest.cpp  sattest.h
tools/: CMakeLists.txt  obbgen.cpp  obbgen.h
